--- a/assets/main.css
+++ b/assets/main.css
@@ -88,7 +88,8 @@ nav li a{
 .container_intro{
 	width: 50%;
 	margin: 0 auto;
-	padding-top: 200px;
+	padding-top: 50px;
+	text-align: center;
 }
 
 .container_list{
@@ -121,19 +122,19 @@ li a{
 	font-size: 14px;
 }
 #debono, #rollercoaster, #reframe, #productdesign, #digdreams, #impdart{
-	width: 85%;
+	width: 70%;
 	margin: 0 auto;
 	font-size: 25px;
 	padding-top: 100px;
 	text-transform: uppercase;
 }
 .project_desc{
-	width: 85%;
+	width: 70%;
 	margin: 0 auto;
 }
 
 .interviews{
-	padding-left: 50px;
+	padding-left: 100px;
 	margin: 0 auto;
 }
 
@@ -159,3 +160,58 @@ footer{
 	text-align: center;
 	color: #EF5B7D;
 }
+
+
+
+
+
+
+
+.content_tab{
+	width: 85%;
+	margin: 0 auto;
+}
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    /*border: 1px solid #EF5B7D;*/
+    /*background-color: #f1f1f1;*/
+    display: inline-block;
+
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-family: Sunflower, sans-serif;
+    text-transform: uppercase;
+    color: #EF5B7D;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #EF5B7D;
+    color: white;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+
+}
+
