--- a/assets/main.css
+++ b/assets/main.css
@@ -199,18 +199,15 @@ footer{
     font-size: 14px;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
     background-color: #ddd;
 }
 
-/* Create an active/current tablink class */
 .tab button.active {
     background-color: #EF5B7D;
     color: white;
 }
 
-/* Style the tab content */
 .tabcontent {
     display: none;
     padding: 6px 12px;
@@ -218,4 +215,22 @@ footer{
     border-top: none;
 
 }
+
+.proj_img {
+	width: 85%;
+	margin: 0 auto;
+	display: inline-block;
+	text-align: center;
+	float: none;
+}
+
+.box_content {
+	width: 90%;
+	margin: 0 auto;
+}
+.text_content{
+	width: 85%;
+	margin: 0 auto;
+}
+
 
