--- a/assets/main.css
+++ b/assets/main.css
@@ -16,7 +16,7 @@ body, h2{
 }
 .container_home{
 	margin: 0 auto;
-	background-color: #EF5B7D;
+	background-color: #25BFBF;
 	height: 300px;
 	text-align:	center;
 	line-height: 20px;
@@ -49,6 +49,7 @@ header::after{
 
 .logo {
 	float: left;
+	opacity: 0.85;
 }
 nav {
 	float: right;
@@ -68,10 +69,22 @@ nav li {
 	position: relative;
 }
 nav li a{
-	color: #EF5B7D;
+	color: #25BFBF;
 	text-decoration: none;
 	text-transform: uppercase;
 }
+
+.link{
+	color: #25BFBF;
+	text-decoration: none;
+	border-bottom: 1.5px solid transparent;
+	transition: border-bottom-color 250ms;
+}
+
+.link:hover{
+	border-bottom-color: #25BFBF;
+}
+
 .unselected {
 	color: grey;
 	text-decoration: none;
@@ -112,7 +125,7 @@ li{
 	padding-top: 12px;
 }
 li a{
-	color: #EF5B7D;
+	color: #25BFBF;
 	text-decoration: none;
 	text-transform: uppercase;
 }
@@ -158,7 +171,7 @@ li a{
 footer{
 	position: relative;
 	text-align: center;
-	color: #EF5B7D;
+	color: #A3A3A3;
 }
 
 
@@ -195,7 +208,7 @@ footer{
     transition: 0.3s;
     font-family: Sunflower, sans-serif;
     text-transform: uppercase;
-    color: #EF5B7D;
+    color: #25BFBF;
     font-size: 14px;
 }
 
@@ -204,7 +217,7 @@ footer{
 }
 
 .tab button.active {
-    background-color: #EF5B7D;
+    background-color: #25BFBF;
     color: white;
 }
 
