--- a/assets/main.css
+++ b/assets/main.css
@@ -65,7 +65,6 @@ nav li {
 	display: inline-block;
 	margin-left: 12px;
 	padding-top: 0px;
-
 	position: relative;
 }
 nav li a{
@@ -85,6 +84,7 @@ nav li a{
 	border-bottom-color: #25BFBF;
 }
 
+
 .unselected {
 	color: grey;
 	text-decoration: none;
@@ -97,6 +97,78 @@ nav li a{
 	color: black;
 	border-bottom-color: black;
 }
+
+
+.hide{
+	visibility: hidden;
+}
+
+.topnav {
+  overflow: hidden;
+  float: right;
+}
+
+.topnav a {
+	float: left;
+	display: block;  
+	color: grey;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	border-bottom: 1.5px solid transparent;
+	transition: border-bottom-color 250ms;
+}
+
+.topnav a:(not icon) hover {
+	color: black;
+	border-bottom-color: black;
+}
+
+.topnav .active {
+	color: #25BFBF;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.topnav .icon{
+	display: none;
+}
+
+@media screen and (max-width: 990px) {
+  .topnav a {
+  	display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon:hover{
+  	color: #25BFBF;
+  }
+}
+
+
+@media screen and (max-width: 990px) {
+  .topnav.responsive {
+  	position: relative;
+  	float: none;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a.hide {
+    display: none;
+  }
+  .topnav.responsive a {
+  	position: relative;
+  	padding-top: 10px;
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 
 .container_intro{
 	width: 50%;
