--- a/assets/main.css
+++ b/assets/main.css
@@ -128,6 +128,7 @@ nav li a{
 	color: #25BFBF;
 	text-decoration: none;
 	text-transform: uppercase;
+	border-bottom-color: #25BFBF;
 }
 
 .topnav .icon{
@@ -166,6 +167,7 @@ nav li a{
     float: none;
     display: block;
     text-align: left;
+    border-bottom-color: white;
   }
 }
 
@@ -246,7 +248,10 @@ footer{
 	color: #A3A3A3;
 }
 
-
+.tile{
+	height: 300px;
+	width: 300px;
+}
 
 .tile:hover{
 	opacity: 0.6;
