--- a/assets/main.css
+++ b/assets/main.css
@@ -18,10 +18,19 @@ body, h2{
 	margin: 0 auto;
 	background-color: #25BFBF;
 	height: 300px;
-	text-align:	center;
+	text-align: center;
+	vertical-align: middle;
 	line-height: 20px;
-	padding-top: 150px;
+	padding-top: 25px;
+	padding-bottom: 75px;
 }
+.home_intro{
+	margin: 0 auto;
+	position: relative;
+	width: 50%;
+	text-align: left;
+}
+
 .container_about{
 	width: 50%;
 	margin: 0 auto;
@@ -34,9 +43,12 @@ body, h2{
 
 h1{
 	color: white;
-	font-size: 60px;
+	font-size: 100px;
 }
-
+h2{
+	color: #123F49;
+	font-size: 20px;
+}
 
 header{
 }
@@ -323,4 +335,13 @@ footer{
 	margin: 0 auto;
 }
 
+.subtitle{
+	font-size: 12px;
+	color: grey;
+}
+
+.section{
+	font-size: 20px;
+	color: #25BFBF;
+}
 
