--- a/assets/main.css
+++ b/assets/main.css
@@ -62,6 +62,11 @@ body, h2{
 	text-align: left;
 }
 
+.centered{
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
+}
 h1{
 	color: white;
 	font-size: 100px;
@@ -212,7 +217,7 @@ nav li a{
 
 
 .container_intro{
-	width: 100%;
+	width: 60%;
 	margin: 0 auto;
 	padding-top: 50px;
 	text-align: center;
