--- a/assets/main.css
+++ b/assets/main.css
@@ -69,11 +69,11 @@ body, h2{
 }
 h1{
 	color: white;
-	font-size: 100px;
+	font-size: 80px;
 }
 h2{
 	color: #123F49;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 header{
@@ -357,6 +357,7 @@ footer{
 	position: relative;
 	display: inline-block;
 	text-align: center;
+	vertical-align: middle;
 	float: none;
 }
 
