--- a/assets/main.css
+++ b/assets/main.css
@@ -331,7 +331,7 @@ footer{
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    font-family: Sunflower, sans-serif;
+    font-family: Roboto, sans-serif;
     text-transform: uppercase;
     color: #25BFBF;
     font-size: 14px;
