--- a/assets/main.css
+++ b/assets/main.css
@@ -3,6 +3,7 @@ body{
 	font-weight: 300;
 	font-style: light;
 	color: #5C5C5C;
+	margin:	0 auto;
 }
 
 b{
@@ -19,7 +20,7 @@ b{
     z-index: 1;
 }
 .top_padding{
-	padding-top: 100px;">
+	padding-top: 80px;">
 }
 .container{
 	width: 85%;
@@ -148,6 +149,11 @@ nav li a{
 	text-transform: uppercase;
 }
 
+mark { 
+    background-color: #BDFFF7;
+    color: black;
+}
+
 .link{
 	color: #25BFBF;
 	text-decoration: none;
@@ -210,7 +216,7 @@ nav li a{
 	display: none;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 900px) {
   .topnav a {
   	display: none;}
   .topnav a.icon {
@@ -223,7 +229,7 @@ nav li a{
 }
 
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 900px) {
   .topnav.responsive {
   	position: relative;
   	float: none;
@@ -246,7 +252,16 @@ nav li a{
   }
 }
 
+.content{
+	overflow: hidden;
+    background-color: white;
+    position: relative;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 1px 30px rgba(36, 53, 53, 0.05);
 
+
+}
 .container_intro{
 	width: 60%;
 	margin: 0 auto;
@@ -284,6 +299,16 @@ li a{
 	float: none;
 	font-size: 14px;
 }
+
+.proj_nav{
+	margin: 0 auto;
+	padding-top: 10px;
+	display: inline-block;
+	text-align: center;
+	vertical-align: middle;
+	float: none;
+}
+
 #debono, #rollercoaster, #reframe, #productdesign, #digdreams, #impdart{
 	width: 70%;
 	margin: 0 auto;
@@ -319,6 +344,8 @@ li a{
 }
 
 footer{
+	padding-top: 20px;
+	padding-bottom: 20px;
 	position: relative;
 	text-align: center;
 	color: #A3A3A3;
@@ -334,6 +361,16 @@ footer{
 	transition: 0.3s;
 }
 
+.tile_small{
+	height: 25%;
+	width: 25%;
+	padding: 1%;
+}
+
+.tile_small:hover{
+	opacity: 0.6;
+	transition: 0.3s;
+}
 
 
 .content_tab{
@@ -383,7 +420,6 @@ footer{
 }
 
 .proj_img {
-	width: 85%;
 	margin: 0 auto;
 	position: relative;
 	display: inline-block;
@@ -396,7 +432,20 @@ footer{
 	width: 60%;
 	margin: 0 auto;
 	padding-top: 50px;
+	padding-bottom: 50px;
+
 }
+.proj_nav_background{
+	background-color: #F3F3F3;
+}
+
+.proj_nav_content {
+	width: 60%;
+	margin: 0 auto;
+	padding-top: 20px;
+	padding-bottom: 50px;
+}
+
 .text_content{
 	width: 85%;
 	margin: 0 auto;
