--- a/assets/main.css
+++ b/assets/main.css
@@ -216,7 +216,10 @@ mark {
 	display: none;
 }
 
-@media screen and (max-width: 900px) {
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
   .topnav a {
   	display: none;}
   .topnav a.icon {
@@ -228,9 +231,47 @@ mark {
   }
 }
 
+@media screen and (max-width: 900px){ 
+	.topnav a {
+  	display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon:hover{
+  	color: #25BFBF;
+  }
+}
 
-@media screen and (max-width: 900px) {
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
   .topnav.responsive {
+  	position: relative;
+  	float: none;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a.hide {
+    display: none;
+  }
+  .topnav.responsive a {
+  	position: relative;
+  	padding-top: 10px;
+    float: none;
+    display: block;
+    text-align: left;
+    border-bottom-color: white;
+  }
+}
+
+@media screen and (max-width: 900px){
+	.topnav.responsive {
   	position: relative;
   	float: none;
   }
