finished belaybelt write-up

--- a/assets/main.css
+++ b/assets/main.css
@@ -465,6 +465,9 @@ footer{
 	vertical-align: middle;
 	float: none;
 }
+.img{
+	width: 100%;
+}
 .proj_news{
 	display: flex;
 	flex-direction: row;
