--- a/assets/main.css
+++ b/assets/main.css
@@ -592,14 +592,20 @@ header::after{
 
 .logo {
 	/*height:39.2px; */
-	/*width:210px;*/
+	width:210px;
 	height: 50px;
 	padding-left: 40px;
-	transition: all .2s ease-in-out;
+	/* transition: all .2s ease-in-out; */
+	background: url("reginalogo-01.svg") no-repeat;
+	background-position: 40px;
+		display: inline-block;	
 }
 
 .logo:hover{
-	transform: scale(1.05);
+	/* transform: scale(1.05); */
+	background: url("reginalogo-02.svg") no-repeat;
+	background-position: 40px;
+	display: inline-block;
 }
   @media only screen 
 	/* and (min-device-width: 375px)  */
