--- a/assets/main.css
+++ b/assets/main.css
@@ -252,6 +252,15 @@ h3{
 	min-height: calc(100vh - 250px);
 	/* flex-wrap: wrap; */
 }
+.container_summary_short{
+	max-width: 1200px;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	margin-bottom: 20px;
+	min-height: calc(100vh - 350px);
+	/* flex-wrap: wrap; */
+}
 .section_summary{
 	width: 48%;
 }
@@ -361,7 +370,7 @@ h3{
 	margin-bottom: 30px;
 	border-radius: 6px;
 	background-color: var(--card-hover);
-	padding: 10% 5%;
+	padding: 20% 5%;
 	/* margin-top: 150px; */
 	/* height: calc(100vh - 150px); */
 }
@@ -468,7 +477,7 @@ button:focus{
 }
 .container_caption{
 	width: 75%;
-	background-color: #F8F8F9;
+	background-color: var(--card-hover);
 	margin: auto;
 	margin-top: 15px;
 	border-radius: 9px;
@@ -747,6 +756,9 @@ header::after{
 		width: 100%
 	}
 	.container_summary{
+		flex-wrap: wrap;
+	}
+	.container_summary_short{
 		flex-wrap: wrap;
 	}
 	.section_summary{
