--- a/assets/main.css
+++ b/assets/main.css
@@ -27,9 +27,9 @@ body{
 }
 body:after{
 	display:none;
-	content: url("regina-logo-2.svg");
+	content: url("regina-logo-2.svg") url("profile-fast.gif");
    }
-   
+
 a{
 	text-decoration: none;
 	color: var(--text-color)
