--- a/assets/main.css
+++ b/assets/main.css
@@ -5,7 +5,7 @@
 	--button-color:#0D0D0D;
 	--button-hover-color: #5C5C5C;
 	--card-color: #F8F8F9;
-	--theme-ux: #35a68a;
+	--theme-ux: #0da38e;
 	--highlight-color: #12c98c;
 	--highlight-darken: #12c98c;
 	--tag-background: #b6e3d5;
@@ -200,6 +200,13 @@ h3{
 	display: flex;
 	align-items: center;
 }
+.category{
+	text-align: center;
+	margin-bottom: 5vh;
+}
+.category_image{
+	height: 20vh;
+}
 .category_text{
 	position: absolute;
 	top: 30vh;
@@ -208,7 +215,7 @@ h3{
 .category_title{
 	font-weight: 700;
 	font-size: 36px;
-	color: white;
+	color: black;
 	
 	/* top: 30vh;
 	left: 50px; */
@@ -244,7 +251,7 @@ h3{
 }
 .card_category{
 	/* border:1px solid #e0e0e0; */
-	background-color: var(--card-background);
+	background-color: var(--card-hover);
 	border-radius: 9px;
 	height: 450px;
 	width: 27%;
