--- a/assets/main.css
+++ b/assets/main.css
@@ -361,6 +361,10 @@ h3{
 	height: fit-content;
 	/* min-width: 300px; */
 }
+.border{
+	border-bottom: 1px solid var(--text-header-color);
+	margin-bottom: 3%;
+}
 .summary_image{
 	max-height: 100%;
 	width: 100%;
@@ -403,6 +407,15 @@ h3{
 	font-weight: 300;
 	font-size: 18px;
 	margin-bottom: 30px;
+}
+.content_text_no_margin{
+	font-family: Source Sans Pro;
+	font-weight: 300;
+	font-size: 18px;
+}
+.bold{
+	color: var(--text-header-color);
+	font-weight: 700;
 }
 .text_title{
 	font-weight: 700;
@@ -495,6 +508,15 @@ h3{
 	text-decoration: none;
 	border-bottom: 1.5px solid transparent;
 	transition: border-bottom-color 250ms;
+}
+.navigation{
+	color: var(--text-header-color);
+	font-weight: 700;
+}
+.navigation:hover{
+	text-decoration: none;
+	color: var(--highlight-color);
+	transition: all .15s ease-in-out;
 }
 .button_primary{
 	-webkit-appearance: button;
@@ -618,6 +640,9 @@ button:focus{
 .sideBySideItem{
 	padding-right: 2%;
 }
+.sideBySideItem_isLast{
+	padding-right: 0%;
+}
 .width_33{
 	width: 30%;
 }
@@ -626,6 +651,9 @@ button:focus{
 }
 .width_66{
 	width: 64%
+}
+.align_right{
+	text-align: right;
 }
 input{
 	border: none;
@@ -773,6 +801,9 @@ header::after{
 			font-size: 2.2rem;
 		}
 		.content_text{
+			font-size: 1.8rem;
+		}
+		.content_text_no_margin{
 			font-size: 1.8rem;
 		}
 		.image_text{
