--- a/assets/main.css
+++ b/assets/main.css
@@ -243,10 +243,15 @@ h3{
 	padding: 20px;
 	margin-bottom: 20px;
 	position: relative;
+	top: 0px;
 }
 .card:hover{
-	background-color: var(--card-hover);
+	/* background-color: var(--card-hover); */
 	text-decoration: none;
+	top: -5px;
+	box-shadow: 0px 2px 8px rgba(184, 184, 184, 0.45);
+	transition: all .15s ease-in-out;
+	border:1px solid var(--highlight-color);
 }
 .card_category{
 	/* border:1px solid #e0e0e0; */
