--- a/assets/main.css
+++ b/assets/main.css
@@ -253,6 +253,32 @@ h3{
 	transition: all .15s ease-in-out;
 	border:1px solid var(--highlight-color);
 }
+.card_full{
+	border:1px solid #e0e0e0;
+	border-radius: 9px;
+	height: 200px;
+	width: 100%;
+	padding: 20px;
+	margin-bottom: 20px;
+	position: relative;
+	top: 0px;
+}
+.card_full:hover{
+	/* background-color: var(--card-hover); */
+	text-decoration: none;
+	top: -5px;
+	box-shadow: 0px 2px 8px rgba(184, 184, 184, 0.45);
+	transition: all .15s ease-in-out;
+	border:1px solid var(--highlight-color);
+}
+.card_image_full{
+	height: 200px;
+	width: 100%;
+	object-fit: cover;
+	object-position: top;
+	border-radius: 7px;
+	margin: 0 0 15px 0;
+}
 .card_category{
 	/* border:1px solid #e0e0e0; */
 	background-color: var(--card-hover);
